# sudoku_flutter

./: .gitignore  CLAUDE.md  PUZZLE_GENERATION.md  README.md  pubspec.yaml
.claude/: CHANGES.md  settings.local.json
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/example/sudoku_flutter/: MainActivity.kt
assets/queues/: queues-iphone.z
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: app_settings.dart  puzzle_queue_entry.dart  puzzle_queue_store.dart  saved_game.dart  thumbnail_cache.dart
lib/puzzle/: puzzle_engine.dart  puzzle_ffi.dart  puzzle_types.dart
lib/screens/: album_screen.dart  difficulty_screen.dart  game_list_screen.dart  game_screen.dart  home_screen.dart  new_game_dialog.dart  settings_screen.dart  slideshow_screen.dart
lib/theme/: app_theme.dart
lib/widgets/: cell_widget.dart  game_card.dart  keypad_widget.dart  puzzle_grid.dart  toolbar_widget.dart
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig  SudokuEngine.xcconfig
macos/Runner/group_maps/: mir01.z  mir02.z  mir03.z  mir04.z  mir05.z  mir06.z  mir07.z  mir08.z  mir09.z  mir10.z  rot_2grp01.z  rot_3grp01.z  rot_3grp02.z  rot_3grp03.z  rot_3grp04.z
native/: CMakeLists.txt  Filenames_cli.cpp  Filenames_cli.d  Filenames_impl.mm  FourColorMap.d  GroupMap.d  Makefile  Puzzle_answer.d  Puzzle_bruteforce.d  Puzzle_clues.d  Puzzle_parameters.d  Puzzle_solver.d  XCODE_SETUP.md  Yield.h  are_neighbors_array.d  comb_util.d  insertion_sort.d  insertion_sort_impl.cpp  print_puzzle.h  queue_data.d  queue_sizes.d  rand_utils.d  set_bit_array.d  sudoku_combinations.d  sudoku_ffi.cpp  sudoku_ffi.d  sudoku_ffi.h  test_construct_puzzle_cli.cpp  test_construct_puzzle_cli.d  test_irregular_cli  test_irregular_cli.cpp  test_irregular_cli.d  test_one_cli  test_one_cli.cpp  test_one_cli.d  test_timing_study  test_timing_study.cpp  test_timing_study.d  test_timing_study.fast  utility.d  (+1 more)
test/: widget_test.dart
web/: index.html
